# heihachi

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  __init__.py  api_server.py  index.html  ini  pyproject.toml  requirements-autobahn.txt  requirements-fire-interface.txt  requirements-huggingface.txt  requirements.txt  setup.py
.claude/: settings.local.json
alignment/: alignment.py  composite_similarity.py  similarity.py
annotation/: peak_detection.py  segment_clustering.py  transition_detector.py
configs/: autobahn_integration.yaml  default.yaml  fire_interface.yaml  huggingface.yaml
configs/custom/: drum_heavy.yaml
core/: audio_processing.py  mix_analyzer.py  pipeline.py
docs/: autobahn-integration.md  env-configuration.md  framework.md  heihachi-audio.tex  huggingface.md  index.html  new-implementation.md  specialised.md  supplementary-information.md  tasks.md
docs/css/: style.css
docs/foundation/: audio-drip-algorithm.tex  audio-oscillations.tex  ezomgido.tex
docs/heihachi/: README-OPTIMIZATION.md  interactive-explorer.md  tasks.md  triangle.md
docs/ideas/: code.md  fire.md
docs/js/: main.js
docs/perspective/: consious-reality.tex  oscillatory-perception.tex
examples/: autobahn_delegation_demo.py
feature_extraction/: baseline_analysis.py  bpm_analysis.py  groove_analysis.py  rhythmic_analysis.py
honbasho/: LICENSE.md  package-lock.json  package.json
honbasho/src/components/: DeskScene.js  HireMe.js  LiquidDistortion.js  Logo.js  PlayerApp.js  PlayerAudioProvider.js  SearchPlayer.js  twistMaterial.js
honbasho/src/pages/: framework.js  player.js
juvhe-wema-spades/: package-lock.json  package.json
juvhe-wema-spades/src/components/: CategoricalObserver.js  Desk.js  DeskScene.js  Footer.js  InterferenceObserver.js  LiquidDistortion.js  PlayerApp.js  PlayerVisualizer.js  TrackSearch.js
juvhe-wema-spades/src/hooks/: useSpotify.js  useTrackObserver.js
juvhe-wema-spades/src/pages/: index.js  investors.js  player.js
publication/categorical-digital-audio/: captions.tex  categorical-audio-specifications.aux  categorical-audio-specifications.bbl  categorical-audio-specifications.blg  categorical-audio-specifications.out  categorical-audio-specifications.tex  generate_panels.py  references.bib
publication/prompt-based-library/: prompt-based-library-search.aux  prompt-based-library-search.out  prompt-based-library-search.tex  references.bib
publication/sources/: trans-planckian-counting.tex
scripts/: analyze_drum_features.py  completion.py  extract_from_results.py  inspect_features_structure.py  inspect_results_json.py  interactive_demo.py  setup.py  setup_autobahn_integration.py  setup_complete_system.py  showcase_framework.py  subsample_data.py  summarize_results.py  visualize_results.py  visualize_results_json.py
scripts/visualizations/MachineCodeAudioCommunications3_20250327_121818/: framework_overview.json
src/: __init__.py  main.py
src/alignment/: __init__.py  alignment.py  amen_break_analysis.py  composite_similarity.py  prior_subspace_analysis.py  similarity.py
src/annotation/: peak_detection.py  transition_detector.py
src/api/: __init__.py  app.py  autobahn_integration.py  config.py  job_manager.py  routes.py
src/cli/: __init__.py  batch_cli.py  command.py  commands.py  enhanced_cli.py  huggingface_commands.py  interactive_cli.py
src/commands/: __init__.py  compare.py  interactive.py
src/configs/: default.yaml  huggingface.yaml  performance.yaml
src/core/: __init__.py  audio_processing.py  audio_scene.py  autobahn_bridge.rs  batch_processing.py  mix_analyzer.py  pipeline.py
src/feature_extraction/: __init__.py  drum_analysis.py  percussion_analysis.py  rhythmic_analysis.py  spectral_analysis.py
src/huggingface/: __init__.py  audio_analyzer.py  audio_captioner.py  beat_detector.py  drum_analyzer.py  feature_extractor.py  real_time_beat_tracker.py  similarity_analyzer.py  stem_separator.py  wav2vec2_drum_analyzer.py  zero_shot_tagger.py
src/interactive/: app.py  explorer.py
src/semantic/: __init__.py  domain_llms.py  embedding_generator.py  feature_mapping.py  llm_connector.py  main.py  pdf_processor.py  semantic_analyzer.py  vector_store.py
src/tests/: test_audio_processing.py  test_pipeline.py  test_rhythmic_analysis.py  test_visualization.py
src/utils/: __init__.py  batch_processor.py  cache.py  comparison.py  config.py  env_loader.py  error_handler.py  export.py  interactive.py  lazy_loading.py  logging_utils.py  profiling.py  progress.py  result_viewer.py  storage.py  visualization.py  visualization_optimization.py  web_ui.py
src/visualization/: __init__.py  plots.py
tests/: test_drum_alignment.py
utils/: config.py  logging_utils.py  storage.py  visualization.py
validation/: README.md  requirements.txt
validation/publication/: abstract.tex  audio-drip-algorithm.tex  discussion.tex  figures.tex  neuro-audio-coupling.tex  oscillatory-foundation.tex  problem-definition.tex  proposed-structure.md  references.bib  st-stellas-entropy.tex  thermodynamic-consequences-in-audio-processing.aux  thermodynamic-consequences-in-audio-processing.blg  thermodynamic-consequences-in-audio-processing.tex  thermodynamic-consequences-in-audio-processing.toc  thermodynamic-consequences.aux  thermodynamic-consequences.fdb_latexmk  thermodynamic-consequences.fls  thermodynamic-consequences.out  thermodynamic-consequences.toc  thermodynamic-models.tex
validation/src/drip/: comparitive_analysis.py  drip_algorithm.py  drip_visualisation.py  extreme_value_analysis.py  reconstruction.py  signature_visualisation.py  unique_drip_signature.py  visual_song_recognition.py
validation/src/oscillations/: arrangement.py  context.py  (+10 more)
visualizations/MachineCodeAudioCommunications3_20250327_121818/: framework_overview.json  index.html
visualizations/drum_feature_analysis/: analysis_summary.txt
yokozuna/: env.example  next.config.js  package.json
yokozuna_validation/: convert.py  run_analysis.py
(+39 files in other folders)
